manifests/homeops/homeassist/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeops
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
