manifests/homeops/homeassist/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homeassist
  namespace: homeops
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homeassist
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "8123"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel
            k8s:io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8123"
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dawarich
            k8s:io.kubernetes.pod.namespace: dawarich
      toPorts:
        - ports:
            - port: "3000"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: adguard
            k8s:io.kubernetes.pod.namespace: adguard
      toPorts:
        - ports:
            - port: "3000"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mariadb
            k8s:io.kubernetes.pod.namespace: mariadb
      toPorts:
        - ports:
            - port: "3306"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            k8s:io.kubernetes.pod.namespace: media-apps
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: uptime-kuma
            k8s:io.kubernetes.pod.namespace: uptime-kuma
      toPorts:
        - ports:
            - port: "80"
    - toEndpoints:
        - {}
    - toEntities:
        - world
