manifests/homeops/homeassist/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homeassist
  namespace: homeops
spec:
  endpointSelector:
    matchLabels:
      app: homeassist
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8123"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "8123"
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - toEndpoints:
        - matchLabels:
            app: adguard
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3000"
    - toEndpoints:
        - matchLabels:
            app: mariadb
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3306"
    - toEndpoints:
        - matchLabels:
            app: plex
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - toEndpoints:
        - matchLabels:
            app: uptime-kuma
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "80"
    - toEndpoints:
        - {}
    - toEntities:
        - world
